# clawtrace

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  TODOS.md
.github/workflows/: deploy.yml
costcraft/: .gitignore  README.md  pyproject.toml
costcraft/costcraft/: claude.py  cli.py  gdpval.py  grader.py  guards.py  ingest_server.py  parallel_refine.py  pricing.py  refine.py  runner.py  sb_cli.py  sb_grader.py  skbench_cli.py  spreadsheetbench.py  trace_export.py  tracecard.py  verify.py  workspace.py
costcraft/costcraft/analysts/: __init__.py  error_analyst.py  patch.py  success_analyst.py
costcraft/costcraft/skills/: costcraft_prompt.md  default_skill.md
docs/: AGENT_EVALUATION_STRATEGY.md  CEO_PRODUCT_SPEC.md  LANDING_PAGE_MESSAGING_WORKSHOP.md  OBSERVABILITY_MARKET_RESEARCH.md  OPENCLAW_COST_AUDIT_CONTROL_JOURNEY.md  OPENCLAW_STATE_VERSIONING_RESEARCH.md  TRACE_DETAIL_CONCEPT_RENAMING_SPEC.md  USER_JOURNEY_FLOW_SPEC.md  WORKFLOW_RELIABILITY_WEDGE_DESIGN.md
docs/ceo-plans/: 2026-03-22-workflow-reliability-control-loop.md
docs/design-reviews/: 2026-03-23-workflow-reliability-control-loop.md
docs/design-specs/: CLAWTRACE_ATELIER_COMPONENT_SPEC.md  clawtrace.interfaces.ts  clawtrace.tokens.css
docs/eng-reviews/: 2026-03-23-workflow-reliability-control-loop.md
docs/sketches/: workflow-reliability-debugger-wireframe.html
paper_experiments/: README.md  setup.sh
paper_experiments/manifests/: gdpval_tasks.yaml  sb_split_10_30.json  spreadsheetbench_tasks.yaml
puppygraph/: schema.json
(+125 files in other folders)
