[project]
name = "costcraft"
version = "0.1.0"
description = "Cost-aware trace distillation harness for GDPval on OpenClaw + ClawTrace"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "anthropic>=0.39",
    "google-generativeai>=0.8",
    "rapidfuzz>=3.5",
]

[project.scripts]
costcraft = "costcraft.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["costcraft*"]
